# indicTranslate

./: .gitignore  README.md  makefile  pyproject.toml
.github/workflows/: test_translator.yml
indicTranslate/: indicTranslate  translator.py
tests/: test_basic.py
